--- a/charts/stable/matomo/Chart.yaml
+++ b/charts/stable/matomo/Chart.yaml
@@ -25,7 +25,7 @@ dependencies:
     alias: ""
     tags: []
     import-values: []
-deprecated: false
+deprecated: true
 description: Matomo is the leading Free/Libre open analytics platform
 home: https://truecharts.org/charts/stable/matomo
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/matomo.webp
@@ -43,5 +43,4 @@ sources:
   - https://github.com/matomo-org/matomo
   - https://github.com/truecharts/charts/tree/master/charts/stable/matomo
 type: application
-version: 16.7.3
-
+version: 16.7.4
