--- a/charts/stable/solr/Chart.yaml
+++ b/charts/stable/solr/Chart.yaml
@@ -18,7 +18,7 @@ dependencies:
     alias: ""
     tags: []
     import-values: []
-deprecated: false
+deprecated: true
 description: Apache Solr
 home: https://truecharts.org/charts/stable/solr
 icon: https://truecharts.org/img/hotlink-ok/chart-icons/solr.webp
@@ -37,5 +37,4 @@ sources:
   - https://github.com/apache/solr
   - https://github.com/truecharts/charts/tree/master/charts/stable/solr
 type: application
-version: 13.4.5
-
+version: 13.4.6
