--- a/archive/charts/stable/matomo/Chart.yaml
+++ b/archive/charts/stable/matomo/Chart.yaml
@@ -9,7 +9,7 @@ annotations:
   truecharts.org/min_helm_version: "3.14"
   truecharts.org/train: stable
 apiVersion: v2
-appVersion: 6.0.6
+appVersion: 5.4.0
 dependencies:
   - name: common
     version: 28.16.6
@@ -18,25 +18,29 @@ dependencies:
     alias: ""
     tags: []
     import-values: []
-deprecated: false
-description: Redmine is a flexible project management web application written using Ruby on Rails framework.
-home: https://truecharts.org/charts/stable/redmine
-icon: https://truecharts.org/img/hotlink-ok/chart-icons/redmine.webp
+  - name: mariadb
+    version: 16.3.2
+    repository: oci://oci.trueforge.org/truecharts
+    condition: mariadb.enabled
+    alias: ""
+    tags: []
+    import-values: []
+deprecated: true
+description: Matomo is the leading Free/Libre open analytics platform
+home: https://truecharts.org/charts/stable/matomo
+icon: https://truecharts.org/img/hotlink-ok/chart-icons/matomo.webp
 keywords:
-  - project
-  - management
-  - time
-  - tracking
-  - ticket
+  - analytics
 kubeVersion: '>=1.24.0-0'
 maintainers:
   - name: TrueCharts
     email: info@truecharts.org
     url: https://truecharts.org
-name: redmine
+name: matomo
 sources:
-  - https://github.com/redmine/redmine
-  - https://github.com/truecharts/charts/tree/master/charts/stable/redmine
-  - https://hub.docker.com/_/redmine
+  - https://gallery.ecr.aws/bitnami/matomo
+  - https://github.com/bitnami/bitnami-docker-matomo
+  - https://github.com/matomo-org/matomo
+  - https://github.com/truecharts/charts/tree/master/charts/stable/matomo
 type: application
-version: 15.3.6
+version: 16.7.4
