--- a/charts/stable/redis/values.yaml
+++ b/charts/stable/redis/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: public.ecr.aws/bitnami/redis
+  repository: docker.io/bitnamisecure/redis
   pullPolicy: IfNotPresent
-  tag: 8.2.1@sha256:fb9dbf340b87581a26e2a8a793e73ca846fed253e6070bc246e8cb5d1c82f427
+  tag: latest@sha256:b4e7e4a59e6686e394292a8d811910bdc118daff4e759c4955f26c7406fba958
 
 workload:
   main:
