fix(ci): bump clustertool for daily
Signed-off-by: Kjeld Schouten <info@kjeldschouten.nl>

--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Install ./clustertool
         shell: bash
         run: |
-          VERSION="2.0.0-BETA-17"
+          VERSION="2.0.6"
           FILENAME="clustertool_${VERSION}_linux_amd64.tar.gz"
           URL="https://github.com/trueforge-org/truecharts/releases/download/v${VERSION}/${FILENAME}"
 
