--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -17,7 +17,7 @@ jobs:
     runs-on: actions-runners
     name: "Generate readme files"
     container:
-      image: ghcr.io/trueforge-org/devcontainer:3.1.10@sha256:a75db738d0e5b812cc3acc676333070f8cae44a968b073002ecd201ae5177e47
+      image: oci.trueforge.org/tccr/devcontainer:3.1.10
     steps:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
