--- a/.github/workflows/daily.yaml
+++ b/.github/workflows/daily.yaml
@@ -17,7 +17,7 @@ jobs:
     runs-on: actions-runners
     name: "Generate readme files"
     container:
-      image: oci.trueforge.org/tccr/devcontainer:3.1.10
+      image: oci.trueforge.org/tccr/devcontainer:v2.0.6
     steps:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5
