--- a/charts/premium/app-template/Chart.yaml
+++ b/charts/premium/app-template/Chart.yaml
@@ -20,6 +20,27 @@ dependencies:
     alias: ""
     tags: []
     import-values: []
+  - name: mariadb
+    version: 17.4.2
+    repository: oci://tccr.io/truecharts
+    condition: mariadb.enabled
+    alias: ""
+    tags: []
+    import-values: []
+  - name: redis
+    version: 17.8.2
+    repository: oci://tccr.io/truecharts
+    condition: redis.enabled
+    alias: ""
+    tags: []
+    import-values: []
+  - name: mongodb
+    version: 16.7.2
+    repository: oci://tccr.io/truecharts
+    condition: mongodb.enabled
+    alias: ""
+    tags: []
+    import-values: []
 deprecated: false
 description: Advanced Template to create your own TrueCharts-based Charts
 home: https://truecharts.org/charts/premium/app-template
@@ -37,5 +58,5 @@ sources:
   - https://github.com/truecharts/charts/tree/master/charts/premium/app-template
   - https://github.com/trueforge-org/truecharts/tree/master/charts/premium/app-template
 type: application
-version: 15.8.6
+version: 15.9.0
 
