--- a/.github/workflows/charts-release.yaml
+++ b/.github/workflows/charts-release.yaml
@@ -264,7 +264,8 @@ jobs:
           cd website
           git config user.name "TrueForge-Bot"
           git config user.email "bot@trueforge.org
-
+          # Ensure we rebase in case there are changes from other sources in-between
+          git pull --rebase origin main
           git add .
           git diff-index --quiet HEAD || git commit -m "Update website with latest charts and docs"
           git push origin main
