--- a/.github/workflows/charts-release.yaml
+++ b/.github/workflows/charts-release.yaml
@@ -176,6 +176,7 @@ jobs:
         run: helm registry logout quay.io
 
       - name: Checkout website repo
+        if: github.event_name == 'push'
         uses: actions/checkout@v3
         with:
           repository: trueforge-org/website
@@ -184,7 +185,7 @@ jobs:
           token: "${{ secrets.BOT_TOKEN }}"
 
       - name: Copy docs to website
-        if: needs.check_changes.outputs.changes_detected == 'true'
+        if: github.event_name == 'push'
         shell: bash
         run: |
           #!/bin/bash
@@ -217,25 +218,9 @@ jobs:
             ./.github/scripts/chart-docs.sh "${chart_parts[1]}/${chart_parts[2]}"
           done
 
-      - name: Comment deploy start
-        if: github.event_name != 'push' && needs.check_changes.outputs.changes_detected == 'true'
-        continue-on-error: true
-        uses: mshick/add-pr-comment@b8f338c590a895d50bcbfa6c5859251edc8952fc # v2
-        with:
-          message-id: cloudflare-deploy
-          message: |
-            ### 🚧 Deploy Preview building...
-
-            |  Name               | Link                                                                          |
-            |---------------------|-------------------------------------------------------------------------------|
-            |🔨 Latest commit     | ${{ github.sha }}                                                             |
-            |🔍 Latest deploy log | https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} |
-            ---
-
-
       - name: Prefetch contributor icons
         shell: bash
-        if: needs.check_changes.outputs.changes_detected == 'true'
+        if: github.event_name == 'push'
         run: |
           #!/bin/bash
 
@@ -260,10 +245,11 @@ jobs:
           #done < src/assets/contributors.json
 
       - name: Commit and push changes
+        if: github.event_name == 'push'
         run: |
           cd website
           git config user.name "TrueForge-Bot"
-          git config user.email "bot@trueforge.org
+          git config user.email "bot@trueforge.org"
           # Ensure we rebase in case there are changes from other sources in-between
           git pull --rebase origin main
           git add .
