--- a/.github/workflows/charts-release.yaml
+++ b/.github/workflows/charts-release.yaml
@@ -196,10 +196,11 @@ jobs:
 
           ./temp/clustertool charts genchartlist ./charts
           mv -f charts.json website/src/assets/charts.json
-
+          mv -f ./website/src/content/docs/charts/description-list.mdx ./description-list.mdx
           echo "Copying changelogs to docs"
           rm -rf ./website/src/content/docs/charts/
           mkdir -p ./website/src/content/docs/charts/
+          mv -f ./description-list.mdx ./website/src/content/docs/charts/description-list.mdx
           mkdir -p ./changelogs
 
           # Check if there are any directories in changelogs
