--- a/.github/workflows/charts-lint.yaml
+++ b/.github/workflows/charts-lint.yaml
@@ -19,7 +19,8 @@ on:
 jobs:
   lint-and-verify:
     name: Lint Charts and Verify Dependencies
-    runs-on: ubuntu-latest
+    runs-on:
+      group: default
     steps:
       - name: Checkout [master]
         if: inputs.chartChangesDetected == 'true'
