--- a/charts/stable/jupyter/values.yaml
+++ b/charts/stable/jupyter/values.yaml
@@ -1,35 +1,35 @@
 image:
   repository: quay.io/jupyter/base-notebook
   pullPolicy: IfNotPresent
-  tag: 2025-09-23
+  tag: "2025-09-23"
 minimalImage:
   repository: quay.io/jupyter/minimal-notebook
   pullPolicy: IfNotPresent
-  tag: 2025-09-23
+  tag: "2025-09-23"
 rImage:
   repository: quay.io/jupyter/r-notebook
   pullPolicy: IfNotPresent
-  tag: 2025-09-23
+  tag: "2025-09-23"
 scipyImage:
   repository: quay.io/jupyter/scipy-notebook
   pullPolicy: IfNotPresent
-  tag: 2025-09-23
+  tag: "2025-09-23"
 tensorflowImage:
   repository: quay.io/jupyter/tensorflow-notebook
   pullPolicy: IfNotPresent
-  tag: 2025-09-23
+  tag: "2025-09-23"
 datascienceImage:
   repository: quay.io/jupyter/datascience-notebook
   pullPolicy: IfNotPresent
-  tag: 2025-09-23
+  tag: "2025-09-23"
 pysparkImage:
   repository: quay.io/jupyter/pyspark-notebook
   pullPolicy: IfNotPresent
-  tag: 2025-09-23
+  tag: "2025-09-23"
 allsparkImage:
   repository: quay.io/jupyter/all-spark-notebook
   pullPolicy: IfNotPresent
-  tag: 2025-09-23
+  tag: "2025-09-23"
 jupyter:
   jupyter_cmd: lab
   restartable: true
