--- a/.github/workflows/charts-lint.yaml
+++ b/.github/workflows/charts-lint.yaml
@@ -19,8 +19,8 @@ on:
 jobs:
   lint-and-verify:
     name: Lint Charts and Verify Dependencies
-    runs-on:
-      group: default
+    ## TODO: Move to our own runners
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout [master]
         if: inputs.chartChangesDetected == 'true'
