chore(kanboard): try removing digest  for now

--- a/charts/stable/kanboard/values.yaml
+++ b/charts/stable/kanboard/values.yaml
@@ -1,6 +1,6 @@
 image:
   repository: ghcr.io/kanboard/kanboard
-  tag: v1.2.49@sha256:84703c948f1b403267c6cf426c1b66da320dd67c4aa280d36b2f21f8b7c2ab9a
+  tag: "v1.2.48"
   pullPolicy: IfNotPresent
 service:
   main:
