--- a/charts/stable/nzbget/values.yaml
+++ b/charts/stable/nzbget/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/home-operations/nzbget
+  repository: oci.trueforge.org/containerforge/nzbget
   pullPolicy: IfNotPresent
-  tag: 25.4.0@sha256:7afaa93e1992f86a033a310eb0f012f1e4c6bd406caa608146df951e85298ff1
+  tag: "25.3.0"
 service:
   main:
     ports:
