--- a/charts/stable/nzbhydra/values.yaml
+++ b/charts/stable/nzbhydra/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/home-operations/nzbhydra2
+  repository: oci.trueforge.org/containerforge/nzbhydra2
   pullPolicy: IfNotPresent
-  tag: 7.19.2@sha256:d6a5b3c0beb12e97804577b0e47f6bfca1a3e5d3946f3c524cba7f6a0ef0aab3
+  tag: 7.19.2
 service:
   main:
     ports:
