--- a/charts/stable/qbittorrent/values.yaml
+++ b/charts/stable/qbittorrent/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/home-operations/qbittorrent
+  repository: oci.trueforge.org/containerforge/qbittorrent
   pullPolicy: IfNotPresent
-  tag: 5.1.2@sha256:31ac39705e31f7cdcc04dc46c1c0b0cdf8dc6f9865d4894efc097a33adc41524
+  tag: 5.1.2
 qbitportforwardImage:
   repository: docker.io/mjmeli/qbittorrent-port-forward-gluetun-server
   pullPolicy: IfNotPresent
