--- a/charts/stable/sonarr/values.yaml
+++ b/charts/stable/sonarr/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/home-operations/sonarr
+  repository: oci.trueforge.org/containerforge/sonarr
   pullPolicy: IfNotPresent
-  tag: 4.0.16.2943@sha256:0a1b8f5cb5b072f7ad8c6ff64a25dc512115d1a114ecf19a58a3b4f870207ddd
+  tag: "4.0.16.2942"
 exportarrImage:
   repository: ghcr.io/onedr0p/exportarr
   pullPolicy: IfNotPresent
