--- a/charts/stable/bazarr/values.yaml
+++ b/charts/stable/bazarr/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/home-operations/bazarr
+  repository: oci.trueforge.org/containerforge/bazarr
   pullPolicy: IfNotPresent
-  tag: 1.5.3@sha256:2f1c32cb1420b2e56f60cfdf7823737eb501fdb2c13669429d23ab3a02e9ad90
+  tag: 1.5.3
 exportarrImage:
   repository: ghcr.io/onedr0p/exportarr
   tag: v2.3.0@sha256:af535d94061cf97a52e1661945ffba78c03f9443eae7c0da1a80a5a4be56b520
