--- a/charts/stable/emby/values.yaml
+++ b/charts/stable/emby/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/home-operations/emby
+  repository: oci.trueforge.org/containerforge/emby
   pullPolicy: IfNotPresent
-  tag: 4.9.1.80@sha256:28462287162b7daa3ff91ee1810e6cc26331e35f7b7c3955b303d4864f32ec6a
+  tag: 4.9.2.6
 broadcastProxyImage:
   repository: docker.io/alpine/socat
   pullPolicy: IfNotPresent
