--- a/charts/stable/jackett/values.yaml
+++ b/charts/stable/jackett/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/home-operations/jackett
+  repository: oci.trueforge.org/containerforge/jackett
   pullPolicy: IfNotPresent
-  tag: 0.24.250@sha256:b62a631145c8cc730e40b6aca53f08f45a202a5ba52152fac8c15b20866618c2
+  tag: 0.24.244
 service:
   main:
     ports:
