--- a/charts/stable/plex/values.yaml
+++ b/charts/stable/plex/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/home-operations/plex
+  repository: oci.trueforge.org/containerforge/plex
   pullPolicy: IfNotPresent
-  tag: 1.42.2.10156@sha256:9ad8a3506e1d8ebda873a668603c1a2c10e6887969564561be669efd65ae8871
+  tag: 1.42.2.10156
 service:
   main:
     ports:
