--- a/charts/stable/prowlarr/values.yaml
+++ b/charts/stable/prowlarr/values.yaml
@@ -1,6 +1,6 @@
 image:
-  repository: ghcr.io/home-operations/prowlarr
-  tag: 2.1.5.5216@sha256:affb671fa367f4b7029d58f4b7d04e194e887ed6af1cf5a678f3c7aca5caf6ca
+  repository: oci.trueforge.org/containerforge/prowlarr
+  tag: 2.1.5.5216
   pullPolicy: IfNotPresent
 exportarrImage:
   repository: ghcr.io/onedr0p/exportarr
