--- a/charts/stable/radarr/values.yaml
+++ b/charts/stable/radarr/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/home-operations/radarr
+  repository: oci.trueforge.org/containerforge/radarr
   pullPolicy: IfNotPresent
-  tag: 6.0.3.10276@sha256:0ebc60aa20afb0df76b52694cee846b7cf7bd96bb0157f3b68b916e77c8142a0
+  tag: "6.0.3.10276"
 exportarrImage:
   repository: ghcr.io/onedr0p/exportarr
   pullPolicy: IfNotPresent
