--- a/charts/stable/sabnzbd/values.yaml
+++ b/charts/stable/sabnzbd/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/home-operations/sabnzbd
+  repository: oci.trueforge.org/containerforge/sabnzbd
   pullPolicy: IfNotPresent
-  tag: 4.5.5@sha256:da57e01cdebc547852b6df85c8df8c0e4d87792742c7608c5590dc653b184e8c
+  tag: 4.5.5
 exportarrImage:
   repository: ghcr.io/onedr0p/exportarr
   pullPolicy: IfNotPresent
