--- a/charts/stable/theme-park/values.yaml
+++ b/charts/stable/theme-park/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: ghcr.io/home-operations/theme-park
+  repository: oci.trueforge.org/containerforge/theme-park
   pullPolicy: IfNotPresent
-  tag: 1.21.3@sha256:e883383aae4152201edb6277ed8e3925853e6d5f4a9ae8f961a95054045d4a91
+  tag: 1.21.3
 service:
   main:
     ports:
