--- a/charts/stable/renovate/values.yaml
+++ b/charts/stable/renovate/values.yaml
@@ -1,7 +1,7 @@
 image:
-  repository: oci.trueforge.org/tccr/renovate
+  repository: oci.trueforge.org/containerforge/renovate
   pullPolicy: IfNotPresent
-  tag: v2.0.0-BETA-17
+  tag: 41.169.1
 
 workload:
   main:
