--- a/charts/stable/kubernetes-dashboard/values.yaml
+++ b/charts/stable/kubernetes-dashboard/values.yaml
@@ -1,7 +1,7 @@
 image:
   pullPolicy: IfNotPresent
-  repository: oci.trueforge.org/tccr/kube-sa-proxy
-  tag: latest
+  repository: oci.trueforge.org/containerforge/kube-sa-proxy
+  tag: 1.30.2
 
 webImage:
   repository: docker.io/kubernetesui/dashboard-web
