fix(external-dns): Adding support for PowerDNS provider (#41645)
**Description**
<!--
ExternalDNS supports PowerDNS provider. This change adds required
arguments for externalDNS to talk to PowerDNS server
-->
⚒️ Fixes  # <!--(issue)-->

**⚙️ Type of change**

- [x] ⚙️ Feature/App addition
- [ ] 🪛 Bugfix
- [ ] ⚠️ Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] 🔃 Refactor of current code
- [x] 📜 Documentation Changes

**🧪 How Has This Been Tested?**
<!--
Tested on a production environment toward an existing PowerDNS
installation
-->

**📃 Notes:**
<!-- Please enter any other relevant information here -->

**✔️ Checklist:**

- [x] ⚖️ My code follows the style guidelines of this project
- [x] 👀 I have performed a self-review of my own code
- [x] #️⃣ I have commented my code, particularly in hard-to-understand
areas
- [x] 📄 I have made changes to the documentation
- [ ] 🧪 I have added tests to this description that prove my fix is
effective or that my feature works
- [x] ⬆️ I increased versions for any altered app according to semantic
versioning
- [x] I made sure the title starts with `feat(chart-name):`,
`fix(chart-name):`, `chore(chart-name):`, `docs(chart-name):` or
`fix(docs):`

**➕ App addition**

If this PR is an app addition please make sure you have done the
following.

- [ ] 🖼️ I have added an icon in the Chart's root directory called
`icon.png`

---

_Please don't blindly check all the boxes. Read them and only check
those that apply.
Those checkboxes are there for the reviewer to see what is this all
about and
the status of this PR with a quick glance._

---------

Signed-off-by: Christian Tardif <christian.tardif@servinfo.ca>

--- a/charts/stable/external-dns/values.yaml
+++ b/charts/stable/external-dns/values.yaml
@@ -20,6 +20,10 @@ externaldns:
   piholePassword: ""
   piholeAPIVersion: ""
   triggerLoopOnEvent: "false"
+  # with externaldns.provider = pdns
+  pdns:
+    pdnsApiKey: ""
+    pdnsServerUrl: ""
   txtOwnerId: ""
   txtPrefix: ""
   txtSuffix: ""
