--- a/.github/renovate/updates/pin.json5
+++ b/.github/renovate/updates/pin.json5
@@ -2,7 +2,7 @@
       "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "packageRules": [
     {
-      "matchUpdateTypes": ["pin"],
+      "matchUpdateTypes": ["pin", "pinDigest"],
       "automerge": true
     }
   ],
