default to renvoate add-labels

--- a/.github/renovate/basics/labels.json5
+++ b/.github/renovate/basics/labels.json5
@@ -3,27 +3,27 @@
   "packageRules": [
     {
       "matchUpdateTypes": ["major"],
-      "labels": ["type/major"]
+      "addLabels": ["type/major"]
     },
     {
       "matchUpdateTypes": ["minor"],
-      "labels": ["type/minor", "automerge"]
+      "addLabels": ["type/minor", "automerge"]
     },
     {
       "matchUpdateTypes": ["patch"],
-      "labels": ["type/patch", "automerge"]
+      "addLabels": ["type/patch", "automerge"]
     },
     {
       "matchUpdateTypes": ["digest", "pin", "pinDigest"],
-      "labels": ["type/digest", "automerge"]
+      "addLabels": ["type/digest", "automerge"]
     },
     {
       "matchUpdateTypes": ["pin", "pinDigest"],
-      "labels": ["type/pin", "automerge"]
+      "addLabels": ["type/pin", "automerge"]
     },
     {
       "matchUpdateTypes": ["lockfile"],
-      "labels": ["type/lockfile", "automerge"]
+      "addLabels": ["type/lockfile", "automerge"]
     },
     {
       "matchManager": ["docker", "helm-values"],
