--- a/.github/renovate/kinds/astro.json5
+++ b/.github/renovate/kinds/astro.json5
@@ -2,9 +2,9 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "npm": {
     "fileMatch": [
-      "(^|/)website/.+/astro\\.config\\.(mjs|js|ts)$", // Matches Astro config files in /website and any subdirectory
-      "(^|/)website/.+/package\\.json$", // Matches package.json files in /website and any subdirectory
-      "(^|/)website/.+/package-lock\\.json$" // Matches package.json files in /website and any subdirectory
+      "(^|/)astro\\.config\\.(mjs|js|ts)$", // Matches Astro config files in /website and any subdirectory
+      "(^|/)package\\.json$", // Matches package.json files in /website and any subdirectory
+      "(^|/)package-lock\\.json$" // Matches package.json files in /website and any subdirectory
     ],
     "branchPrefix": "renovate/astro-",
     "enabled": true, // Enable updates for website dependencies
