--- a/.github/renovate/basics/labels.json5
+++ b/.github/renovate/basics/labels.json5
@@ -14,7 +14,7 @@
       "addLabels": ["type/patch", "automerge"]
     },
     {
-      "matchUpdateTypes": ["digest", "pin", "pinDigest"],
+      "matchUpdateTypes": ["digest"],
       "addLabels": ["type/digest", "automerge"]
     },
     {
